// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option renders a default multi-select state 1`] = `
<div>
  <div
    aria-selected="false"
    class="fui-Option"
    id="fluent-option1"
    role="option"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 6a3 3 0 013-3h8a3 3 0 013 3v8a3 3 0 01-3 3H6a3 3 0 01-3-3V6zm3-1.5c-.83 0-1.5.67-1.5 1.5v8c0 .83.67 1.5 1.5 1.5h8c.83 0 1.5-.67 1.5-1.5V6c0-.83-.67-1.5-1.5-1.5H6z"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;

exports[`Option renders a default single-select state 1`] = `
<div>
  <div
    aria-selected="false"
    class="fui-Option"
    id="fluent-option1"
    role="option"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7.03 13.9L3.56 10a.75.75 0 00-1.12 1l4 4.5c.29.32.79.34 1.09.03l10.5-10.5a.75.75 0 00-1.06-1.06l-9.94 9.94z"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;

exports[`Option renders a selected multi-select state 1`] = `
<div>
  <div
    aria-selected="true"
    class="fui-Option"
    id="fluent-option1"
    role="option"
  >
    <span
      aria-hidden="true"
      class="fui-Option__checkIcon"
    >
      <svg
        aria-hidden="true"
        class=""
        fill="currentColor"
        height="1em"
        viewBox="0 0 20 20"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 3a3 3 0 00-3 3v8a3 3 0 003 3h8a3 3 0 003-3V6a3 3 0 00-3-3H6zm7.85 4.85l-5 5a.5.5 0 01-.7 0l-2-2a.5.5 0 01.7-.7l1.65 1.64 4.65-4.64a.5.5 0 01.7.7z"
        />
      </svg>
    </span>
    Default Option
  </div>
</div>
`;
